<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/primary_dark"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/top_box"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_avatar"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/avatar" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_park"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/jura_park" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1 "
                android:contentDescription="@string/image_matrix"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/matrix" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image_polar"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/the_polar_express" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/FilmsSearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primary_dark"
        android:minHeight="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#B388FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:minHeight="48dp"
        android:text="@string/disclaimer"
        android:textColor="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />


    <androidx.cardview.widget.CardView
        android:id="@+id/menu_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_dark"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container">

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_container">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/btn_menu"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/btn_fav"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/btn_watch_later"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/btn_selections"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/btn_setting"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/teal_200"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
